--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
     <section class="main">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-6 main-content text-uppercase">
+                <div class="col-sm-6 main-content text-uppercase">
                   our mission is to empower the crypto industry and help projects to grow up.<br>
                   <span id="typed"></span>
                 </div>
-                <div class="col-md-6 main-hero">
+                <div class="col-sm-6 main-hero">
 
                 </div>
             </div>
