--- a/index.html
+++ b/index.html
@@ -63,6 +63,35 @@
         </div>
     </section>
 
+    <section class="partners">
+      <div class="heading mt-5">
+        OUR PARTNERS
+      </div>
+      <div class="caro mt-3">
+        <div class="container">
+          <div class="brand-carousel section-padding owl-carousel">
+            <div class="single-logo">
+              <img src="assets/LaunchZone Logo undefined.png" loading="lazy" alt="">
+            </div>
+            <div class="single-logo">
+                <img src="assets/bunny.png" loading="lazy" alt="">
+              </div>
+            <div class="single-logo">
+                <img src="assets/tomochain.png" loading="lazy" alt="">
+              </div>
+            <div class="single-logo">
+                <img src="assets/Pandora Protocol Logo undefined.png" loading="lazy" alt="">
+              </div>
+              <div class="single-logo">
+                <img src="assets/neo-neo-logo-full 1.png" loading="lazy" alt="">
+              </div>
+              
+          </div>
+        </div>
+      </div>
+
+    </section>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/dd30fe193f.js"></script>
