--- a/ama.html
+++ b/ama.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="amastyle.css" />
+    <link rel="stylesheet" href="./css/amastyle.css" />
   </head>
   <body>
     <header>
